Fix nav alignment post-rebase

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -2,17 +2,6 @@
   position: relative;
   background: $color-green-primary;
 
-  .mas-logo {
-    padding: $baseline-unit*2 0;
-    margin: 0 0 0 $baseline-unit*2;
-    @include respond-to($mq-l) {
-      margin: 0 0 0 1.6667%;
-      position: absolute;
-      top: 24px;
-      padding: 0;
-    }
-  }
-
   .mobile-nav {
     display: none;
   }
@@ -63,11 +52,11 @@
   padding: $baseline-unit 0;
 
   .search-box {
+    @extend %clearfix;
     position: relative;
     margin: 0 auto;
 
-    @extend %clearfix;
-    @include respond-to($mq-l) {
+    @include respond-to($mq-m) {
       @include column(6);
       @include push(3);
     }
